tests/neg/i20245.check

-- [E046] Cyclic Error: tests/neg/i20245/Typer_2.scala:16:57 -----------------------------------------------------------
16 |  private[typer] val unification = new Unification(using this) // error
   |                                                         ^
   |              Cyclic reference involving class Context
   |
   |              The error occurred while trying to compute the base classes of class Context
   |                which required to compute the base classes of trait TyperOps
   |                which required to compute the signature of trait TyperOps
   |                which required to elaborate the export clause export unification.requireSubtype
   |                which required to compute the signature of value unification
   |                which required to type the right hand side of value unification since no explicit type was given
   |                which required to compute the base classes of class Context
   |
   |               Run with both -explain-cyclic and -Ydebug-cyclic to see full stack trace.
   |
   | longer explanation available when compiling with `-explain`
